<resources>

    <string name="app_name">Detach</string>
    <string name="action_settings">Settings</string>
    <string name="sqlCreateTableMissedActivity">CREATE TABLE MissedActivity (ID INTEGER PRIMARY KEY AUTOINCREMENT, name VARCHAR(50), phone BIGINT(11) NOT NULL, time DATETIME, action VARCHAR(50) NOT NULL, message VARCHAR(150));</string>
    <string name="sqlCreateTablePastStatuses">CREATE TABLE PastStatuses (ID INTEGER PRIMARY KEY AUTOINCREMENT, name VARCHAR(50), phone BIGINT(11) NOT NULL, time DATETIME, status VARCHAR(150));</string>
    <string name="ok">Yeah.</string>
    <string name="cancel">Maybe later.</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="settings">Settings</string>
    <string name="sendregid">Send Regid</string>
    <string name="contacts">Contacts</string>
    <string name="detach">Detach</string>
    <string name="iamback">I am Back</string>
    <string name="status">Update Status</string>
    <string name="currentstatus">Driving until 10am</string>
    <string name="whatshappening">What\'s Happening?</string>
	<string name="statusicon">StatusIcon</string>
	<string name="username">Detach User</string>
	<string name="userstatus">User Status</string>
	<string name="updatedat">Updated At</string>
	<string name="timeremaining">Time Remaining</string>
    <string name="isFirstTime">is_first_time</string>
	
	<string name="PhoneNumber">Phone number</string>

    <string-array name="statusCompletion_array">
        <item>Driving</item>
        <item>in a meeting</item>
        <item>tied up for the moment</item>
        <item>busy. I\'ll call you in a sec.</item>
    </string-array>

</resources>